language/move-prover/tests/sources/functional/references.exp
Move prover returns: exiting with boogie verification errors
error: function does not abort under this condition

    ┌── tests/sources/functional/references.move:69:9 ───
    │
 69 │         aborts_if true;
    │         ^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/references.move:62: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:63: mut_ref_incorrect
    =         b_ref = <redacted>
    =     at tests/sources/functional/references.move:64: mut_ref_incorrect
    =     at <internal>:1
    =     at tests/sources/functional/references.move:43: mut_b
    =         b = <redacted>
    =     at tests/sources/functional/references.move:44: mut_b
    =     at tests/sources/functional/references.move:45: mut_b
    =     at tests/sources/functional/references.move:64: mut_ref_incorrect
    =     at tests/sources/functional/references.move:65: mut_ref_incorrect
    =         b = <redacted>
    =     at tests/sources/functional/references.move:66: mut_ref_incorrect
    =     at tests/sources/functional/references.move:67: mut_ref_incorrect
    =     at tests/sources/functional/references.move:69
